ui: added warning tailind colors

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,8 @@
   --accent-foreground: 240 5.9% 10%;
   --destructive: 0 84.2% 60.2%;
   --destructive-foreground: 0 0% 98%;
+  --warning: 36 100% 50%;
+  --warning-foreground: 0 0% 98%;
   --border: 240 5.9% 90%;
   --input: 240 5.9% 90%;
   --ring: 240 5.9% 10%;
@@ -47,6 +49,8 @@
   --accent-foreground: 0 0% 98%;
   --destructive: 0 62.8% 42.5%;
   --destructive-foreground: 0 0% 98%;
+  --warning: 34 62.8% 42.5%;
+  --warning-foreground: 34 62.8% 42.5%;
   --border: 240 3.7% 15.9%;
   --input: 240 3.7% 15.9%;
   --ring: 240 4.9% 83.9%;
