--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,6 +41,8 @@
   --popover-foreground: 0 0% 98%;
   --primary: 0 0% 98%;
   --primary-foreground: 240 5.9% 10%;
+  --success: 131 62.8% 42.5%;
+  --success-foreground: 141 71% 48%;
   --secondary: 240 3.7% 15.9%;
   --secondary-foreground: 0 0% 98%;
   --muted: 240 3.7% 15.9%;
