--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,8 @@
   --accent-foreground: 240 5.9% 10%;
   --destructive: 0 84.2% 60.2%;
   --destructive-foreground: 0 0% 98%;
+  --success: 118 63.4% 51.4%;
+  --success-foreground: 0 0% 98%;
   --warning: 36 100% 50%;
   --warning-foreground: 0 0% 98%;
   --border: 240 5.9% 90%;
@@ -42,7 +44,7 @@
   --primary: 0 0% 98%;
   --primary-foreground: 240 5.9% 10%;
   --success: 131 62.8% 42.5%;
-  --success-foreground: 141 71% 48%;
+  --success-foreground: 240 5.9% 10%;
   --secondary: 240 3.7% 15.9%;
   --secondary-foreground: 0 0% 98%;
   --muted: 240 3.7% 15.9%;
